--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "bcrypt": "^6.0.0",
+    "child_process": "^1.0.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "google-polyline": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "shapefile": "^0.6.6",
     "shp-write": "^0.3.2",
     "xlsx": "^0.18.5",
